# example

./: LICENSE
.devcontainer/: devcontainer.json
.gemini/: config.yaml  styleguide.md
py_app/: pyproject.toml
py_app/src/py_app/: __init__.py
